--- a/style.css
+++ b/style.css
@@ -5,8 +5,9 @@ body {
 	align-items: center;
 	justify-content: center;
 	height: 100vh;
-	background: #222f38;
+	background: #000000;
 	text-align: center;
+	overflow: hidden;
 }
 
 /* Start of Yoda Animation */
@@ -289,4 +290,11 @@ input[type="text"] {
 	font-weight: 400;
     font-style: normal;
     font-size: 18px;
+}
+
+.ball {
+    position: absolute;
+    border-radius: 100%;
+    opacity: 0.7;
+    z-index: -2000;
 }
